[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llm-sdk",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "accelerate>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[tool.mypy]
exclude = [
    "^\\.venv/",
    "^llm_sdk/"
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
